--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -31,12 +31,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
-      - uses: pnpm/action-setup@v4
-        name: Install pnpm
-        with:
-          version: 8
-          run_install: false
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -65,10 +59,10 @@ jobs:
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
             
       - name: Install dependencies
-        run: pnpm install
+        run: npx pnpm install
         
       - name: Build with Next.js
-        run: pnpm next build
+        run: npx pnpm next build
         
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
