--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -43,7 +43,7 @@ jobs:
         with:
           node-version: "20"
           cache: 'pnpm'
-          
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
@@ -52,7 +52,7 @@ jobs:
           #
           # You may remove this line if you want to manage the configuration yourself.
           static_site_generator: next
-          
+
       - name: Restore cache
         uses: actions/cache@v4
         with:
@@ -63,13 +63,13 @@ jobs:
           # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
-            
+
       - name: Install dependencies
         run: npx pnpm install
-        
+
       - name: Build with Next.js
-        run: npx pnpm next build
-        
+        run: npx pnpm build
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
