--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
-name: Build Next.js site
+name: Deploy Next.js site to Github Pages
 
 on:
   push:
-    branches: ["main"]
+    tags: '*'
   workflow_dispatch:
 
 permissions:
@@ -15,45 +15,36 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build:
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
-        name: Install pnpm
         with:
           version: 8
           run_install: false
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: 'pnpm'
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
+      - uses: actions/configure-pages@v5
         with:
           static_site_generator: next
-
-      - name: Restore cache
-        uses: actions/cache@v4
+      - uses: actions/cache@v4
         with:
           path: |
             .next/cache
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
-
-      - name: Install dependencies
-        run: npx pnpm install
-
-      - name: Build with Next.js
-        run: npx pnpm build
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - run: npx pnpm install
+      - run: npx pnpm build
+      - uses: actions/upload-pages-artifact@v3
         with:
           path: ./out
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
